--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,47 +20,45 @@ on:
         required: false
         type: string
 
-
 jobs:
-  Tieba每日签到:
+  tieba-daily-sign-in:  # Corrected job ID
     runs-on: ubuntu-latest
     steps:
-    - name: 检出代码库
+    - name: Checkout Code
       uses: actions/checkout@v2
-    - name: 设置 JDK 8
+    - name: Set up JDK 8
       uses: actions/setup-java@v3
       with:
         java-version: '8'
         distribution: 'temurin'
-    - name: 缓存 Maven 依赖项
+    - name: Cache Maven Dependencies
       uses: actions/cache@v2
       with:
         path: ~/.m2/repository
         key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-maven-
-    - name: 检查环境变量 (非测试模式)
+    - name: Check Environment Variables (Non-Test Mode)
       if: github.event.inputs.test_mode != 'true' && ( env.BDUSS == '' || env.SCKEY == '' )
       run: |
-        echo "错误：未设置 BDUSS 或 SCKEY。"
+        echo "Error: BDUSS or SCKEY is not set."
         exit 1
-    - name: 设置 BDUSS
+    - name: Set BDUSS
       run: |
         if [ "${{ github.event.inputs.test_mode }}" == "true" ]; then
           echo "BDUSS=${{ github.event.inputs.bduss_override || env.BDUSS }}" >> $GITHUB_ENV
         else
           echo "BDUSS=${{ env.BDUSS }}" >> $GITHUB_ENV
         fi
-    - name: 设置 SCKEY
+    - name: Set SCKEY
       run: |
-          echo "SCKEY=${{ env.SCKEY }}" >> $GITHUB_ENV #SCKEY Shouldn't be overridden.
-
-    - name: 运行贴吧签到
+          echo "SCKEY=${{ env.SCKEY }}" >> $GITHUB_ENV
+    - name: Run Tieba Sign-In
       id: tieba-sign-in
       run: |
         mvn compile exec:java -Dexec.mainClass="top.srcrs.Run" -Dexec.args="${{ env.BDUSS }} ${{ env.SCKEY }}" || exit 1
 
-    - name: 检查签到状态
+    - name: Check Sign-In Status
       if: steps.tieba-sign-in.outcome != 'success'
       run: |
-        echo "贴吧签到失败！考虑在此处使用 SCKEY 发送通知。"
+        echo "Tieba Sign-In Failed! Consider sending a notification using SCKEY here."
