--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
   gollum:
   schedule:
     - cron: '30 */12 * * *'
-  workflow_dispatch:  # 添加手动触发
+  workflow_dispatch:  # 手动触发
 
 jobs:
   TiebaSignIn:
